<resources>
    <string name="app_name">Coldbrew</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_code_title">Enter the 6-digit code sent to</string>
    <string name="code">Code</string>
    <string name="error_confirm_code">Incorrect code. You can try %d more times.</string>
    <string name="error_confirm_failed">Code confirmation failed. Request a new code.</string>
    <string name="request_code_title">Didn\'t receive it?</string>
    <string name="request_new_code">Request a new code</string>
    <string name="log_in">LOG IN</string>
    <string name="footer_text">By continuing, you confirm you\'ve read and agree to our Terms of Service and Privacy Notice on how we collect, use, disclose, and process your personal data.</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_button">Next</string>
    <string name="empty_message">Please enter the required data</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">or</string>
    <string name="continue_with_number">Continue with Number</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="my_order">My Order</string>
    <string name="order_prepared">Your order is being prepared…</string>
    <string name="order_eta">ETA: 2:25 - 2:40 PM</string>
    <string name="rider_name">Alexander Reyes</string>
    <string name="rating">5.0</string>
    <string name="vehicle_type">Honda ACB125CBFL</string>
    <string name="order_summary">Order Summary</string>
    <string name="number_of_orders">2x</string>
    <string name="iced_latte">Iced Latte</string>
    <string name="large">Large (24 oz)</string>
    <string name="hazelnut">Hazelnut syrup</string>
    <string name="price">Php 200.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="product_price">Php %1$s.00</string>
    <string name="product_detail">Product Detail</string>
    <string name="edit">Edit</string>
    <string name="add_to_basket">Add TO BASKET - %1$s</string>
    <string name="update_basket">UPDATE BASKET - %1$s</string>
    <string name="quantity"><u>QTY: %1$s</u></string>
    <string name="sizes">Large (24 oz)</string>
    <string name="add_ons">Extra espress</string>
    <string name="size">Size</string>
    <string name="button_basket">BASKET (%1$s) - %2$s</string>
    <plurals name="items_plural">
        <item quantity="one">%1$s item</item>
        <item quantity="other">%1$s items</item>
    </plurals>
    <string name="signup_name_hint">What should people call you?</string>
    <string name="email_error">Incorrect email format</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="wrong_password">Phone number and password do not match. Try again.</string>
    <string name="sign_out">Sign Out</string>

    <string name="search">SearchView</string>
    <string name="no_match">No match found</string>
    <string name="enter_some_text" />
    <string name="size_regular">Regular (12oz)</string>
    <string name="size_tall">Tall (16oz)</string>
    <string name="size_large">Large(24oz)</string>
    <string name="caramel_drizzle">Caramel drizzle</string>
    <string name="hazelnut_syrup">Hazelnut syrup</string>
    <string name="toffee_nut_syrup">Toffee nut syrup</string>
    <string name="order_on_the_way">Your order is on the way to you!</string>
    <string name="no_upcoming_order">Looks like you still haven\'t placed any orders yet.</string>
</resources>