<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.SignUpActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <include
        android:id="@+id/header"
        layout="@layout/layout_signup_header"/>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/phone_number"
        android:layout_marginTop="@dimen/xlarge_margin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <LinearLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber">

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="start|center"
            android:layout_weight="0.2"
            app:ccp_defaultNameCode="PH"
            app:ccp_hideNameCode="true"
            app:ccp_defaultCode="63"
            app:ccp_hidePhoneCode="false"
            app:ccp_textSize="@dimen/medium_font"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:inputType="number"
            android:lines="1"
            android:singleLine="true"
            android:textSize="@dimen/medium_font"
            android:drawablePadding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"
        android:layout_marginTop="@dimen/xlarge_margin">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:singleLine="true"
            android:drawablePadding="8dp"
            android:textSize="@dimen/medium_font"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        android:layout_marginTop="@dimen/xlarge_margin">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="@dimen/medium_font"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvFooterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/footer_text"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/next_button"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        android:layout_marginBottom="@dimen/xlarge_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
