<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".48" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="@id/glImageTop"
        app:layout_constraintBottom_toBottomOf="@id/glImageBottom"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:srcCompat="@drawable/logo_coldbrew" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnNumber"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="@id/glBtnTop">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFb"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_login"
            android:drawableStart="@drawable/icn_fb"
            android:drawablePadding="25dp"
            android:paddingStart="20dp"
            android:text="@string/continue_with_facebook"
            android:textAlignment="viewStart"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_login"
            android:drawableStart="@drawable/icn_google"
            android:drawablePadding="40dp"
            android:paddingStart="20dp"
            android:text="@string/continue_with_google"
            android:textAlignment="viewStart"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApple"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_login"
            android:drawableStart="@drawable/icn_apple"
            android:drawablePadding="45dp"
            android:paddingStart="20dp"
            android:text="@string/continue_with_apple"
            android:textAlignment="viewStart"
            android:textAllCaps="false" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart">

            <View
                android:id="@+id/viewLine1"
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#AAAAAA" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:layout_marginHorizontal="10dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#AAAAAA"
                tools:layout_conversion_absoluteHeight="36dp"
                tools:layout_conversion_absoluteWidth="2dp"
                tools:layout_editor_absoluteX="395dp"
                tools:layout_editor_absoluteY="614dp" />

            <View
                android:id="@+id/viewLine2"
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#AAAAAA" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNumber"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintBottom_toBottomOf="@id/glBtnBottom"
        android:background="@drawable/border_login"
        android:drawableStart="@drawable/icn_mobile"
        android:drawablePadding="40dp"
        android:paddingStart="20dp"
        android:text="@string/continue_with_number"
        android:textAlignment="viewStart"
        android:textAllCaps="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBtnBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBtnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".63" />

</androidx.constraintlayout.widget.ConstraintLayout>